Add more images and write more appropiate titles for algorithm patterns

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta
       name="description"
-      content="Guía práctica para comenzar a producir arte visual algorítmico"
+      content="Introducción rápida para comenzar a producir arte visual algorítmico"
     />
     <meta name="author" content="David Omar Flores Chávez" />
 
@@ -56,7 +56,8 @@
           <h1>Arte Generativo</h1>
           <br />
           <p>
-            Guía práctica para comenzar a producir arte visual con algoritmos
+            Introducción rápida para comenzar a producir arte visual con
+            algoritmos
           </p>
         </section>
 
@@ -90,8 +91,9 @@
             <p class="fragment">...</p>
 
             <aside class="notes">
-              This slide has fragments which are also stepped through in the
-              notes window.
+              La evolución sexual nos hizo desarrollar un instinto artístico y
+              un instinto estético. Si algún trabajo u obra me parece estético,
+              y lo considero arte, lo es. Lo mismo para cualquier persona.
             </aside>
           </section>
 
@@ -104,8 +106,9 @@
             </p>
 
             <aside class="notes">
-              This slide has fragments which are also stepped through in the
-              notes window.
+              Gramática generativa: generar oraciones gramaticalmente correctas
+              a partir de un conjunto de reglas. Programación generativa:
+              creación de instrucciones que permitan programar a mayor nivel.
             </aside>
           </section>
 
@@ -118,8 +121,11 @@
             </p>
 
             <aside class="notes">
-              This slide has fragments which are also stepped through in the
-              notes window.
+              Nees Georg, Frieder Nake. 1965. Alemania. Steve Reich, It's gonna
+              rain. 1965. Brian Eno: Ambien Music for Airports. 1978.
+              Arquitectura y diseño urbano. Celestino Soddu: Ciudad Aleatoria.
+              1989. Literatura: Philip Parker. 200,000+ libros. Enfoque en arte
+              visual producida con algoritmos.
             </aside>
           </section>
         </section>
@@ -131,17 +137,18 @@
         <section>
           <h2>Cómo empezar</h2>
         </section>
-
-        <!-- ----------------------------------------------------------------------- -->
-        <!--                           Título de procesos                            -->
-        <!-- ----------------------------------------------------------------------- -->
+<!-- 
 
         <section>
           <h2>Procesos de una obra</h2>
           <p class="fragment"><b>Generar</b> y <b>Dibujar</b></p>
 
-          <aside class="notes"><b>Generar</b> y <b>Dibujar</b></aside>
-        </section>
+          <aside class="notes">
+            Generar: Diseño de los algoritmos que producen los datos o pasos que
+            utilizamos después para dibujar. Dibujar: Representar los datos
+            generados de manera estética.
+          </aside>
+        </section> -->
 
         <!-- ----------------------------------------------------------------------- -->
         <!--                            Proceso de dibujo                            -->
@@ -220,9 +227,9 @@
 
         <section>
           <section>
-            <h2>Algoritmos Recursivos</h2>
+            <h2>Subdivisión</h2>
             <p class="fragment">
-              Diseño de algoritmos para producir los datos a dibujar
+              Subdividir figuras recursivamente
             </p>
           </section>
           <section>
@@ -231,8 +238,24 @@
               src="./img/davidomarf-triangle-subdivision.png"
             />
             <div class="artwork-credits">
-              <b>Attractor</b>,<br />
+              <b>Triangle Subdivision</b>,<br />
               by davidomarf
+            </div>
+          </section>
+
+          <section>
+            <img class="stretch" src="./img/nork_nork-packing.png" />
+            <div class="artwork-credits">
+              <b>Packing</b>,<br />
+              by nork_nork
+            </div>
+          </section>
+
+          <section>
+            <img class="stretch" src="./img/kovach-acid-city.png" />
+            <div class="artwork-credits">
+              <b>Acid City</b>,<br />
+              by Benjamin Kovach
             </div>
           </section>
         </section>
@@ -240,19 +263,36 @@
         <!-- ---------------------- Interacción de Partículas ---------------------- -->
 
         <section>
-          <h2>Interacción de Partículas</h2>
-          <p class="fragment">
-            Diseño de algoritmos para producir los datos a dibujar
-          </p>
-        </section>
-
-        <!-- ------------------------------ Genéticos ------------------------------ -->
-
-        <section>
-          <h2>De inspiración genética</h2>
-          <p class="fragment">
-            Diseño de algoritmos para producir los datos a dibujar
-          </p>
+          <section>
+            <h2>Interacción de Partículas</h2>
+            <p class="fragment">
+              Partículas con reglas de interacción
+            </p>
+          </section>
+          <section>
+            <img class="stretch" src="./img/kgolid-trace.jpg" />
+            <div class="artwork-credits">
+              <b>Trace</b>,<br />
+              by kgolid
+            </div>
+          </section>
+          <section>
+            <img class="stretch" src="./img/tobyski-letter-home.png" />
+            <div class="artwork-credits">
+              <b>Letter Home</b>,<br />
+              by tobyski
+            </div>
+          </section>
+          <section>
+            <img
+              class="stretch"
+              src="./img/stefano_contiero-impeto-(foga).jpg"
+            />
+            <div class="artwork-credits">
+              <b>Impeto (Foga)</b>,<br />
+              by Stefano Contiero
+            </div>
+          </section>
         </section>
 
         <!-- ---------------------- Ecuaciones Diferenciales ----------------------- -->
@@ -309,8 +349,8 @@
           <section>
             <h2>Ruido de Perlin</h2>
             <p class="fragment">
-              Útiles para crear campos de ruido, mapas de alturas, o mapas de
-              calor.
+              Generador de secuencias aleatorias con mayor orden y armonía que
+              un generador uniforme.
             </p>
           </section>
 
@@ -319,6 +359,14 @@
             <div class="artwork-credits">
               <b>Shallow water</b>,<br />
               by naskou
+            </div>
+          </section>
+
+          <section>
+            <img class="stretch" src="./img/thefoolvoyager-tree-rings.jpg" />
+            <div class="artwork-credits">
+              <b>Tree Rings</b>,<br />
+              by TheFoolVoyager
             </div>
           </section>
 
@@ -335,9 +383,12 @@
 
         <section>
           <section>
-            <h2>Cualquier otro algoritmo</h2>
+            <h2>...</h2>
             <p class="fragment">
               Búsqueda, ordenamiento, emparejamiento, cacheo, etc.
+              <br />
+              <br />
+              Completamente nuevos
             </p>
           </section>
 
@@ -411,15 +462,20 @@
             <img class="stretch" src="./img/trivoid.png" />
           </section>
           <section>
-              <p>Experimentar con espacios de color</p>
-            </section>
-            <section
-            data-background-iframe="http://hslpicker.com">
-                <p> </p>
-              </section>
-              <section>
-                <p><a href="https://www.youtube.com/watch?v=Qj1FK8n7WgY">Understanding Color</a></p>
-        </section>
+            <p>Experimentar con espacios de color</p>
+             <br>
+            <p class="fragment">
+              HSL/HSB/HSV: diseñados para alinearse más con la manera en que el
+              ojo humano percibe el color.
+            </p>
+          </section>
+          <section>
+            <p>
+              <a href="https://www.youtube.com/watch?v=Qj1FK8n7WgY"
+                >Understanding Color</a
+              >
+            </p>
+          </section>
         </section>
 
         <!-- ----------------------------------------------------------------------- -->
