Add 1D example of perlin noise using lines

--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
           <img class="stretch" src="./img/anders-hoff-elastic-web.png" />
           <div class="artwork-credits">
             <b>Elastic Web</b>,<br />
-            by Anders Hoff
+            de Anders Hoff
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/inthepatterns-untitled.jpg" />
           <div class="artwork-credits">
             <b>Untitled</b>,<br />
-            by inthepatterns
+            de inthepatterns
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/kovach-blotch.png" />
           <div class="artwork-credits">
             <b>Blotch</b>,<br />
-            by Benjamin Kovach
+            de Benjamin Kovach
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/tyler-hobbs-non-repeating.png" />
           <div class="artwork-credits">
             <b>Non-repeating</b>,<br />
-            by Tyler Hobbs
+            de Tyler Hobbs
           </div>
         </section>
       </section>
@@ -211,7 +211,7 @@
           <img class="stretch" src="./img/davidomarf-triangle-subdivision.png" />
           <div class="artwork-credits">
             <b>Triangle Subdivision</b>,<br />
-            by davidomarf
+            de davidomarf
           </div>
         </section>
 
@@ -219,7 +219,7 @@
           <img class="stretch" src="./img/nork_nork-packing.png" />
           <div class="artwork-credits">
             <b>Packing</b>,<br />
-            by nork_nork
+            de nork_nork
           </div>
         </section>
 
@@ -227,7 +227,7 @@
           <img class="stretch" src="./img/kovach-acid-city.png" />
           <div class="artwork-credits">
             <b>Acid City</b>,<br />
-            by Benjamin Kovach
+            de Benjamin Kovach
           </div>
         </section>
       </section>
@@ -245,21 +245,21 @@
           <img class="stretch" src="./img/kgolid-trace.jpg" />
           <div class="artwork-credits">
             <b>Trace</b>,<br />
-            by kgolid
+            de kgolid
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/tobyski-letter-home.png" />
           <div class="artwork-credits">
             <b>Letter Home</b>,<br />
-            by tobyski
+            de tobyski
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/stefano_contiero-impeto-(foga).jpg" />
           <div class="artwork-credits">
             <b>Impeto (Foga)</b>,<br />
-            by Stefano Contiero
+            de Stefano Contiero
           </div>
         </section>
       </section>
@@ -279,7 +279,7 @@
           <img class="stretch" src="./img/davidomarf-attractor.jpg" />
           <div class="artwork-credits">
             <b>Attractor</b>,<br />
-            by davidomarf
+            de davidomarf
           </div>
         </section>
       </section>
@@ -297,14 +297,14 @@
           <img class="stretch" src="./img/miguelito-wea.png" />
           <div class="artwork-credits">
             <b>Wea culia</b>,<br />
-            by Miguelito
+            de Miguelito
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/kgolid-symmetric_isometric_automata.jpg" />
           <div class="artwork-credits">
             <b>Symmetric Isometric Automata</b>,<br />
-            by kgolid
+            de kgolid
           </div>
         </section>
       </section>
@@ -320,19 +320,22 @@
           </p>
         </section>
 
-        <section>
-          <img class="stretch" src="./img/naskou-shallow-water.jpg" />
-          <div class="artwork-credits">
-            <b>Shallow water</b>,<br />
-            by naskou
-          </div>
-        </section>
+        <section data-background-iframe="./sketches/uniform-lines"></section>
+        <section data-background-iframe="./sketches/perlin-lines"></section>
 
         <section>
           <img class="stretch" src="./img/thefoolvoyager-tree-rings.jpg" />
           <div class="artwork-credits">
             <b>Tree Rings</b>,<br />
-            by TheFoolVoyager
+            de TheFoolVoyager
+          </div>
+        </section>
+
+        <section>
+          <img class="stretch" src="./img/naskou-shallow-water.jpg" />
+          <div class="artwork-credits">
+            <b>Shallow water</b>,<br />
+            de naskou
           </div>
         </section>
 
@@ -340,7 +343,7 @@
           <img class="stretch" src="./img/trivoid.png" />
           <div class="artwork-credits">
             <b>Trivoid</b>,<br />
-            by davidomarf
+            de davidomarf
           </div>
         </section>
       </section>
@@ -350,27 +353,13 @@
       <section>
         <section>
           <h2>...</h2>
-          <p class="fragment">
-            Búsqueda, ordenamiento, emparejamiento, cacheo, etc.
-            <br />
-            <br />
-            Completamente nuevos
-          </p>
-        </section>
-
-        <section>
-          <img class="stretch" src="./img/reallymeannuns-quick-sort.jpg" />
-          <div class="artwork-credits">
-            <b>Quick sort</b>,<br />
-            by reallymeannuns
-          </div>
         </section>
 
         <section>
           <img class="stretch" src="./img/reallymeannuns-shell-sort.jpg" />
           <div class="artwork-credits">
             <b>Shell sort</b>,<br />
-            by reallymeannuns
+            de reallymeannuns
           </div>
         </section>
 
@@ -378,7 +367,7 @@
           <img class="stretch" src="./img/domino-dancing.png" />
           <div class="artwork-credits">
             <b>Domino dancing</b>,<br />
-            by davidomarf
+            de davidomarf
           </div>
         </section>
       </section>
@@ -413,17 +402,10 @@
           <img class="stretch" src="./img/the-last-plateau.png" />
         </section>
         <section>
-          <img class="stretch" src="./img/trivoid-random-palette.png" />
-        </section>
-        <section>
-          <img class="stretch" src="./img/trivoid.png" />
-        </section>
-        <section>
           <p>Experimentar con espacios de color</p>
           <br>
           <p class="fragment">
-            HSL/HSB/HSV: diseñados para alinearse más con la manera en que el
-            ojo humano percibe el color.
+            HSL / HSB / HSV
           </p>
         </section>
         <section>
