Add a screen coordinates plane
Also add proper links to artists in their works credit

--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
           <img class="stretch" src="./img/anders-hoff-elastic-web.png" />
           <div class="artwork-credits">
             <b>Elastic Web</b>,<br />
-            de Anders Hoff
+            de <a href="https://inconvergent.net/" target= "_blank">Anders Hoff</a>
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/inthepatterns-untitled.jpg" />
           <div class="artwork-credits">
             <b>Untitled</b>,<br />
-            de inthepatterns
+            de <a href="https://www.instagram.com/inthepatterns/" target= "_blank">inthepatterns</a>
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/kovach-blotch.png" />
           <div class="artwork-credits">
             <b>Blotch</b>,<br />
-            de Benjamin Kovach
+            de <a href="https://www.kovach.me" target= "_blank">Benjamin Kovach</a>
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/tyler-hobbs-non-repeating.png" />
           <div class="artwork-credits">
             <b>Non-repeating</b>,<br />
-            de Tyler Hobbs
+            de <a href="https://www.tylerxhobbs.com" target= "_blank">Tyler Hobbs</a>
           </div>
         </section>
       </section>
@@ -153,6 +153,7 @@
       <!-- ----------------------------------------------------------------------- -->
 
       <section>
+        <section>
         <h2>Dibujar</h2>
         <p class="fragment">
           Las imágenes son un arreglo de píxeles que puedes explorar usando un
@@ -164,6 +165,14 @@
           window.
         </aside>
       </section>
+      <section>
+        <img class="stretch" src="./img/coordinate-axis-screen.png" />
+          <div class="artwork-credits">
+            <b>Sistema de coordenadas en una pantalla</b>,<br />
+            tomada de Stack Overflow
+          </div>
+      </section>
+    </section>
 
       <!-- --------------------------- Dibujar puntos ---------------------------- -->
 
@@ -211,7 +220,7 @@
           <img class="stretch" src="./img/davidomarf-triangle-subdivision.png" />
           <div class="artwork-credits">
             <b>Triangle Subdivision</b>,<br />
-            de davidomarf
+            de <a href="https://gen.davidomar-com" target= "_blank">davidomarf</a>
           </div>
         </section>
 
@@ -219,7 +228,7 @@
           <img class="stretch" src="./img/nork_nork-packing.png" />
           <div class="artwork-credits">
             <b>Packing</b>,<br />
-            de nork_nork
+            de <a href="https://www.reddit.com/user/nork_nork/" target= "_blank">nork_nork</a>
           </div>
         </section>
 
@@ -227,7 +236,7 @@
           <img class="stretch" src="./img/kovach-acid-city.png" />
           <div class="artwork-credits">
             <b>Acid City</b>,<br />
-            de Benjamin Kovach
+            de <a href="https://www.kovach.me/" target= "_blank">Benjamin Kovach</a>
           </div>
         </section>
       </section>
@@ -245,21 +254,21 @@
           <img class="stretch" src="./img/kgolid-trace.jpg" />
           <div class="artwork-credits">
             <b>Trace</b>,<br />
-            de kgolid
+            de <a href="https://www.generated.space/" target= "_blank">kgolid</a>
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/tobyski-letter-home.png" />
           <div class="artwork-credits">
             <b>Letter Home</b>,<br />
-            de tobyski
+            de <a href="https://www.reddit.com/user/tobyski/" target= "_blank">tobyski</a>
           </div>
         </section>
         <section>
           <img class="stretch" src="./img/stefano_contiero-impeto-(foga).jpg" />
           <div class="artwork-credits">
             <b>Impeto (Foga)</b>,<br />
-            de Stefano Contiero
+            de <a href="https://stefanocontiero.com/art" target= "_blank">Stefano Contiero</a>
           </div>
         </section>
       </section>
@@ -279,11 +288,11 @@
           <img class="stretch" src="./img/davidomarf-attractor.jpg" />
           <div class="artwork-credits">
             <b>Attractor</b>,<br />
-            de davidomarf
+            de <a href="https://gen.davidomar.com" target= "_blank">davidomarf</a>
           </div>
         </section>
       </section>
-      
+
       <!-- --------------------------- Ruido de Perlin --------------------------- -->
 
       <section>
@@ -302,7 +311,7 @@
           <img class="stretch" src="./img/thefoolvoyager-tree-rings.jpg" />
           <div class="artwork-credits">
             <b>Tree Rings</b>,<br />
-            de TheFoolVoyager
+            de <a href="https://www.reddit.com/user/TheFoolVoyager/" target= "_blank">TheFoolVoyager</a>
           </div>
         </section>
 
@@ -310,7 +319,7 @@
           <img class="stretch" src="./img/naskou-shallow-water.jpg" />
           <div class="artwork-credits">
             <b>Shallow water</b>,<br />
-            de naskou
+            de <a href="https://www.reddit.com/user/naskou" target= "_blank">naskou</a>
           </div>
         </section>
 
@@ -318,7 +327,7 @@
           <img class="stretch" src="./img/trivoid.png" />
           <div class="artwork-credits">
             <b>Trivoid</b>,<br />
-            de davidomarf
+            de <a href="https://gen.davidomar.com" target= "_blank">davidomarf</a>
           </div>
         </section>
       </section>
@@ -334,7 +343,7 @@
           <img class="stretch" src="./img/reallymeannuns-shell-sort.jpg" />
           <div class="artwork-credits">
             <b>Shell sort</b>,<br />
-            de reallymeannuns
+            de <a href="https://www.instagram.com/reallymeannuns/" target= "_blank">reallymeannuns</a>
           </div>
         </section>
 
@@ -342,7 +351,7 @@
           <img class="stretch" src="./img/domino-dancing.png" />
           <div class="artwork-credits">
             <b>Domino dancing</b>,<br />
-            de davidomarf
+            de <a href="https://gen.davidomar.com" target= "_blank">davidomarf</a>
           </div>
         </section>
       </section>
@@ -385,7 +394,7 @@
         </section>
         <section>
           <p>
-            <a href="https://www.youtube.com/watch?v=Qj1FK8n7WgY">Understanding Color</a>
+            <a href="https://www.youtube.com/watch?v=Qj1FK8n7WgY" target="_blank">Understanding Color</a>
           </p>
         </section>
       </section>
@@ -519,8 +528,10 @@
 [manfredemohr](https://www.instagram.com/manfredemohr/),
 [mattdesl_art](https://www.instagram.com/mattdesl_art/),
 [neel_generates](https://www.instagram.com/neel_generates/),
+[reallymeannuns](https://www.instagram.com/reallymeannuns/)
 [renickbell](https://www.instagram.com/renickbell/),
 [spatial-matters](https://www.instagram.com/spatial.matters/),
+[stefanocontiero.com](https://stefanocontiero.com/art)
 [tobias_grothmann](https://www.instagram.com/tobias_grothmann/),
 [tylerxhobbs](https://www.instagram.com/tylerxhobbs/)
 
