Add GitHub link

--- a/index.html
+++ b/index.html
@@ -279,8 +279,7 @@
         <section>
           <h2>Atractores</h2>
           <p class="fragment">
-            Calculan el cambio de algunos números, en función del valor de
-            otros números.
+            Clifford y De Jong
           </p>
         </section>
 
@@ -547,6 +546,9 @@
           <p>
             Instagram:
             <a href="https://instagram.com/davidomarf">&nbsp;&nbsp;&nbsp;@davidomarf</a>
+          </p><p>
+            GitHub:
+            <a href="https://instagram.com/davidomarf">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;davidomarf</a>
           </p>
           <p>
             Sitio web:
